incidents/05-networkpolicy/03-dns-blocked/allow-dns-and-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-required-egress
  namespace: network-policy-lab
  labels:
    incident: networkpolicy
    scenario: dns-blocked
spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53

    - to:
        - podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 8080
