incidents/05-networkpolicy/03-dns-blocked/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-default-deny-egress
  namespace: network-policy-lab
  labels:
    incident: networkpolicy
    scenario: dns-blocked
spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
    - Egress

  egress: []
